--- a/src/components/ToDoApp/TaskEditor/components/Editor.module.css
+++ b/src/components/ToDoApp/TaskEditor/components/Editor.module.css
@@ -1,57 +1,38 @@
 .editor {
   display: block;
   position: absolute;
-  width: 40%;
+  width: 30%;
   height: 80%;
-  background-color: aliceblue;
+  background-color: rgb(56 46 45 / 70%);
   margin: 5% 30%;
-  border-radius: 5px;
-  box-shadow: 0 0 5px;
+  border-top-left-radius: 5%;
+  border-bottom-right-radius: 10px;
+  box-shadow: 2px 2px 5px;
 }
 .editor .closer {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -4%;
+  right: -6%;
   display: inline-block;
   width: 10%;
   text-align: center;
   font-size: xx-large;
   font-weight: bolder;
   background-color: rgb(220, 228, 235);
-  border-top-right-radius: 5px;
+  border-radius: 50%;
 }
 .editor .closer:hover {
   background-color: red;
   cursor: pointer;
 }
 
-.editor .body {
+.editor .add {
   position: absolute;
-  width: 80%;
-  padding: 0;
-  top: 20%;
-  left: 5%;
-}
-.editor .body .textOfbody {
-  font-size: large;
-  font-weight: bold;
-  color: rgb(49, 39, 136);
-}
-.editor .body .content {
-  width: 100%;
-  height: 27em;
-  border: 1px solid black;
-  background-color: #f8f8ff;
-  box-shadow: 0 0 6px rgb(155, 179, 224);
-}
-
-.editor .make {
-  position: absolute;
-  bottom: 4.5%;
+  bottom: 3.5%;
   right: 1%;
   display: inline-block;
   width: 10%;
-  padding: 10px 8px;
+  padding: 10px 4px;
   text-align: center;
   font-size: large;
   font-weight: bolder;
@@ -59,7 +40,7 @@
   border-bottom-right-radius: 15px;
   border-top-left-radius: 15px;
 }
-.editor .make:hover {
+.editor .add:hover {
   cursor: pointer;
   background-color: rgba(21, 103, 175);
 }
