--- a/src/components/components-ToDoApp/Input.module.css
+++ b/src/components/components-ToDoApp/Input.module.css
@@ -1,6 +1,7 @@
 .input{
     position:fixed;
     display:block;
+    user-select:none;
     right:2%;
     text-align:center;
     overflow:hidden;
