--- a/src/components/components-ToDoApp/components-TaskArea/ToDoCard.module.css
+++ b/src/components/components-ToDoApp/components-TaskArea/ToDoCard.module.css
@@ -8,7 +8,13 @@ div.card {
   background: rgb(202 235 71);
   background-image: linear-gradient(60deg, #0000006b 0%, transparent, white);
   box-shadow: 3px 4px 7px #0000008a;
+  transition: box-shadow 1s;
 }
+div.card.selected{
+  border:1px solid white;
+  box-shadow: 3px 4px 7px red;
+}
+
 div.card .header {
   padding: 0;
   margin: 0;
@@ -59,6 +65,7 @@ div.card .body::first-letter {
 }
 
 div.card .footer {
+  user-select:none;
   position: absolute;
   padding: 0 10px;
   margin: 0;
@@ -94,4 +101,10 @@ div.card .footer .checkbox{
   border:1px solid red;
 }
 
+div.card .footer .selected{
+   position:absolute;
+   display:block;
+   right:-14px;
+  bottom:3px;
+}
 
