--- a/src/components/components-ToDoApp/TaskArea.module.css
+++ b/src/components/components-ToDoApp/TaskArea.module.css
@@ -1,9 +1,8 @@
-.background{
-    background-color:#F8F8FF;
-    min-height:700px;
-    padding:1%;
-    width:85%;
-    border:none;
-    box-shadow:0 0 3px lightgray
-    
+.background {
+  background-color: #f8f8ff;
+  min-height: 700px;
+  padding: 1%;
+  width: 85%;
+  border: none;
+  box-shadow: 0 0 3px lightgray;
 }
