--- a/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Body.module.css
+++ b/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Body.module.css
@@ -11,8 +11,10 @@
   color: rgb(66 160 165);
 }
 .body .content {
+  display: block;
+  resize: none;
   width: 100%;
-  height: 27em;
+  height: 29em;
   padding: 3px;
   border: none;
   background-color: #f8f8ff;
