--- a/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Body.module.css
+++ b/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Body.module.css
@@ -1,12 +1,13 @@
 .body {
   position: absolute;
   width: 80%;
+  height: 65%;
   padding: 0;
   top: 20%;
   left: 5%;
 }
 .body .textOfbody {
-  font-size: large;
+  font-size: 1.1em;
   font-weight: bold;
   color: rgb(66 160 165);
 }
@@ -14,14 +15,14 @@
   display: block;
   resize: none;
   width: 100%;
-  height: 29em;
+  height: 100%;
   padding: 3px;
   border: none;
+  font-size: 20px;
   background-color: #f8f8ff;
   box-shadow: 0 0 6px rgb(155, 179, 224);
 }
 .body .content:focus {
   outline: none;
   box-shadow: 2px 2px 9px rgb(224, 200, 155);
-  background-color: #f8f8ff;
 }
