--- a/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Header.module.css
+++ b/src/components/components-ToDoApp/components-TaskEditor/components-Editor/Header.module.css
@@ -1,12 +1,13 @@
 .header {
   position: absolute;
   width: 80%;
+  height: 6%;
   padding: 0;
   top: 5%;
   left: 5%;
 }
 .header .textOfheader {
-  font-size: large;
+  font-size: 1.1em;
   font-weight: bold;
   color: rgb(66 160 165);
 }
@@ -15,6 +16,7 @@
   border: none;
   padding: 3px;
   width: 100%;
+  height: 100%;
   font-size: 2em;
   box-shadow: 0 0 6px rgb(155, 179, 224);
   background-color: #f8f8ff;
@@ -23,5 +25,14 @@
 .header input:focus {
   outline: none;
   box-shadow: 2px 2px 9px rgb(224, 200, 155);
-  background-color: #f8f8ff;
+}
+
+.input.casual {
+  background-color: rgb(211, 210, 214);
+}
+.input.warning {
+  background-color: rgb(221, 250, 169);
+}
+.input.important {
+  background-color: rgb(252, 173, 173);
 }
